[package]
name = "oauth_fcm"
version = "0.2.0"
edition = "2021"
authors = ["Yannick Wegel <dev@pizzaboi.de>"]
description = "A library for sending both data and notification Firebase Cloud Messaging (FCM) messages"
license = "MIT"
repository = "https://github.com/ywegel/oauth_fcm"
documentation = "https://docs.rs/oauth_fcm"
readme = "README.md"
keywords = ["fcm", "firebase", "push", "notification", "oauth"]
categories = ["web-programming", "authentication"]

exclude = [
    ".github/*"
]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "8.0"
thiserror = "1.0"

tracing = "0.1.40"

[dev-dependencies]
# Testing
mockito = "1.4.0"
tracing-subscriber = "0.3.18"
tokio-test = "0.4.4"

# Examples
axum = "0.7.5"
rocket = "0.5.0"

[[example]]
name = "axum_example"
path = "examples/axum_example.rs"

[[example]]
name = "rocket_example"
path = "examples/rocket_example.rs"